--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
     <title>Chat GPT Chrome Extension</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+    <!--Remix Icon-->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="header">
+        <button class="menu-toggle">
+          <i class="ri-menu-line"></i>  
+        </button>
         <h3><img src="icons/technology_48x48.png" />ChatGPT Bot</h3>
+    </div>
+
+    <div class="menu">
+        <button id="clear-history"><i class="ri-delete-bin-line"></i><p>Clear History</p></button>
     </div>
     <div class="container">
 
@@ -25,7 +34,6 @@
             </button>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="./script.js"></script>
 </body>
 
